--- a/package.json
+++ b/package.json
@@ -21,23 +21,19 @@
       "require": "./dist/vue3-promise-dialog.umd.js"
     }
   },
-  "dependencies": {},
   "peerDependencies": {
-    "vue": "^3.x"
+    "vue": "^3"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.3",
-    "@types/node": "^18.15.5",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "primeflex": "^3.3.0",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.26.0",
-    "sass": "^1.59.3",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.2.1",
-    "vite-plugin-dts": "^2.1.0",
-    "vue-tsc": "^1.7.13"
+    "@babel/types": "^7",
+    "@types/node": "^22",
+    "@vitejs/plugin-vue": "^5",
+    "sass": "^1",
+    "tslib": "^2",
+    "typescript": "^5",
+    "vite": "^6",
+    "vite-plugin-dts": "^4",
+    "vue-tsc": "^2"
   },
   "keywords": [
     "vue",
